--- a/visual.html
+++ b/visual.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .board {
-            display: flex;
-            flex-direction: column;
-            width: 512px;
-            height: 512px;
-        }
-        div {
-            width: 1000px;
-            height: 64px;
-        }
-        span {
-            aspect-ratio: 1/1;
-            text-align: center;
-            font-size: 70px;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <title>Chess</title>
 </head>
 <body>
-    <div class="board">
-
+    <div class="b">
+        <div id="board"></div>
+        <div class="vertical">
+            <div>0</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <span>first val</span>
+        </div>
+        <div class="horizontal">
+            <div>0</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <span>second val</span>
+        </div>
+    </div>
+    
     </div>
     <input>
     <script src="chess.js"></script>
