--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="b">
-        <div id="board"></div>
+        <div id="board" oncontextmenu="return false"></div>
         <div class="vertical">
             <div>0</div>
             <div>1</div>
@@ -34,7 +34,6 @@
     </div>
     
     </div>
-    <input>
     <script src="main.js"></script>
 </body>
 </html>
