--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Chess</title>
 </head>
 <body>
-    <div class="b">
+    <div id="board-container">
         <div id="board" oncontextmenu="return false"></div>
         <div class="vertical">
             <div>0</div>
