--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,6 @@
     <title>Chess</title>
 </head>
 <body>
-    <div id="board-container">
-        <div id="board" oncontextmenu="return false"></div>
-    </div>
-    </div>
+    <div id="root"></div>
 </body>
 </html>
