Server sends game result, fixed bug with flipboard

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
     <title>Chess</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
+    <div id="controls">
+        <button id="current">Current</button>
+        <button id="start">Start</button>
+        <button id="back">Back</button>
+        <button id="forwards">Forwards</button>
+        <button id="flip">Flip Board</button>
+        <button id="takeback">Takeback</button>
+    </div>
 </body>
 </html>
