--- a/src/home/index.html
+++ b/src/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="icon" href="assets/favicon.svg"></head>
+</head>
 <body>
     <h1>Hello world!</h1>
 </body>
