--- a/src/game/game.html
+++ b/src/game/game.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./game.css">
     <title>Chess</title>
 </head>
-<body>
+<body data-id="{{ .id }}">
     <div id="root">
     </div>
     <div id="controls">
