--- a/src/register/register.html
+++ b/src/register/register.html
@@ -6,7 +6,7 @@
     <title>Chess</title>
 </head>
 <body>
-    <form action="/login" method="POST">
+    <form action="/register" method="POST">
         <label for="username">Username</label>
         <input name="username" required>
         <label for="password">Password</label>
