Added home page and create game button

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NK Chess Home</title>
-<link rel="icon" href="assets/favicon.svg"><script defer src="assets/js/home.js"></script><link href="assets/css/home.css" rel="stylesheet"></head>
+</head>
 <body idlist="{{ .idlist }}">
     <h1>Hello {{.username}}!</h1>
     <h2>Game List:</h2>
