Added seperation between live and past games

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NK Chess Home</title>
 </head>
-<body idlist="{{ .idlist }}">
+<body>
     <h1>Hello {{.username}}!</h1>
-    <h2>Game List:</h2>
+    <h2>Live Games:</h2>
     <div id="game-list">
         
+    </div>
+    <br>
+    <h2>Game History:</h2>
+    <div id="game-history">
     </div>
     <h3>Create Game:</h3>
     <button id="create-game">Create Game</button>
