--- a/src/landing/landing.html
+++ b/src/landing/landing.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <title>NK Chess</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/" id="title" aria-label="NK Chess Home" title="NK Chess Home">
-                <img id="icon" alt="White Queen">
-                <h1>NK Chess</h1>
-            </a>
-            <div id="nav-links">
-                <a href="/login" id="login" title="Log in" aria-label="Log in">Log in</a>
-                <a href="/register" id="register" title="Register" aria-label="Register">Register</a>
-            </div>
-        </nav>
-    </header>
+    {{ template "header.html" . }}
     <main>
         <h1>Your safe haven for everything Chess.</h1>
         <a href="#next-section" aria-label="Learn More" id="next">
