--- a/src/home/home.html
+++ b/src/home/home.html
@@ -6,6 +6,7 @@
     <title>NK Chess Home</title>
 </head>
 <body>
+    {{ template "header.html" . }}
     <h1>Hello {{.username}}!</h1>
     <h2>Live Games:</h2>
     <div id="game-list">
@@ -48,5 +49,6 @@
     <form action="/logout" method="POST">
         <button>Logout</button>
     </form>
+    {{ template "footer.html" . }}
 </body>
 </html>
