--- a/src/landing/landing.html
+++ b/src/landing/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>NK Chess</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
     <main>
         <h1>Your safe haven for everything Chess.</h1>
         <a href="#next-section" aria-label="Learn More" id="next">
-            <i class="material-icons md-36">expand_more</i>
+            <i class="material-symbols-outlined">expand_more</i>
         </a>
         <section id="next-section">
             <h2>Spectate and play games in real time.</h2>
@@ -24,15 +24,15 @@
                 <div id="board-container-parent" aria-label="board"></div>
                 <div id="board-controls">
                     <button id="start" aria-label="Start">
-                        <i class="material-icons md-36">first_page</i>
+                        <i class="material-symbols-outlined">first_page</i>
                     </button><button id="back" aria-label="Back">
-                        <i class="material-icons md-36">arrow_back</i>
+                        <i class="material-symbols-outlined">arrow_back</i>
                     </button><button id="forward" aria-label="Forward">
-                        <i class="material-icons md-36">arrow_forward</i>
+                        <i class="material-symbols-outlined">arrow_forward</i>
                     </button><button id="end" aria-label="End">
-                        <i class="material-icons md-36">last_page</i>
+                        <i class="material-symbols-outlined">last_page</i>
                     </button><button id="flip" aria-label="Flip">
-                        <i class="material-icons md-36">flip</i>
+                        <i class="material-symbols-outlined">flip</i>
                     </button>
                 </div>
             </div>
