--- a/src/game/game.html
+++ b/src/game/game.html
@@ -4,14 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Chess</title>
 </head>
 <body data-id="{{ .id }}">
     {{ template "header.html" . }}
-    <div id="root">
+    <div id="game-flex">
+        <div id="blackInfo">
+            <div id="blackTimer">--:--.--</div>
+        </div>
+        <div id="game">
+            <div id="board-container">
+                <div id="board">
+                    <div notation="a8" class="square">
+                        <span class="left-notation dark">8</span>
+                    </div>
+                    <div notation="b8" class="square dark"></div>
+                    <div notation="c8" class="square"></div>
+                    <div notation="d8" class="square dark"></div>
+                    <div notation="e8" class="square"></div>
+                    <div notation="f8" class="square dark"></div>
+                    <div notation="g8" class="square"></div>
+                    <div notation="h8" class="square dark"></div>
+                    <div notation="a7" class="square dark">
+                        <span class="left-notation light">7</span>
+                    </div>
+                    <div notation="b7" class="square"></div>
+                    <div notation="c7" class="square dark"></div>
+                    <div notation="d7" class="square"></div>
+                    <div notation="e7" class="square dark"></div>
+                    <div notation="f7" class="square"></div>
+                    <div notation="g7" class="square dark"></div>
+                    <div notation="h7" class="square"></div>
+                    <div notation="a6" class="square">
+                        <span class="left-notation dark">6</span>
+                    </div>
+                    <div notation="b6" class="square dark"></div>
+                    <div notation="c6" class="square"></div>
+                    <div notation="d6" class="square dark"></div>
+                    <div notation="e6" class="square"></div>
+                    <div notation="f6" class="square dark"></div>
+                    <div notation="g6" class="square"></div>
+                    <div notation="h6" class="square dark"></div>
+                    <div notation="a5" class="square dark">
+                        <span class="left-notation light">5</span>
+                    </div>
+                    <div notation="b5" class="square"></div>
+                    <div notation="c5" class="square dark"></div>
+                    <div notation="d5" class="square"></div>
+                    <div notation="e5" class="square dark"></div>
+                    <div notation="f5" class="square"></div>
+                    <div notation="g5" class="square dark"></div>
+                    <div notation="h5" class="square"></div>
+                    <div notation="a4" class="square">
+                        <span class="left-notation dark">4</span>
+                    </div><div notation="b4" class="square dark"></div>
+                    <div notation="c4" class="square"></div>
+                    <div notation="d4" class="square dark"></div>
+                    <div notation="e4" class="square"></div>
+                    <div notation="f4" class="square dark"></div>
+                    <div notation="g4" class="square"></div>
+                    <div notation="h4" class="square dark"></div>
+                    <div notation="a3" class="square dark">
+                        <span class="left-notation light">3</span>
+                    </div>
+                    <div notation="b3" class="square"></div>
+                    <div notation="c3" class="square dark"></div>
+                    <div notation="d3" class="square"></div>
+                    <div notation="e3" class="square dark"></div>
+                    <div notation="f3" class="square"></div>
+                    <div notation="g3" class="square dark"></div>
+                    <div notation="h3" class="square"></div>
+                    <div notation="a2" class="square">
+                        <span class="left-notation dark">2</span>
+                    </div>
+                    <div notation="b2" class="square dark"></div>
+                    <div notation="c2" class="square"></div>
+                    <div notation="d2" class="square dark"></div>
+                    <div notation="e2" class="square"></div>
+                    <div notation="f2" class="square dark"></div>
+                    <div notation="g2" class="square"></div>
+                    <div notation="h2" class="square dark"></div>
+                    <div notation="a1" class="square dark">
+                        <span class="bottom-notation light">a</span>
+                        <span class="left-notation light">1</span>
+                    </div>
+                    <div notation="b1" class="square">
+                        <span class="bottom-notation dark">b</span>
+                    </div>
+                    <div notation="c1" class="square dark">
+                        <span class="bottom-notation light">c</span>
+                    </div>
+                    <div notation="d1" class="square">
+                        <span class="bottom-notation dark">d</span>
+                    </div>
+                    <div notation="e1" class="square dark">
+                        <span class="bottom-notation light">e</span>
+                    </div>
+                    <div notation="f1" class="square">
+                        <span class="bottom-notation dark">f</span>
+                    </div>
+                    <div notation="g1" class="square dark">
+                        <span class="bottom-notation light">g</span>
+                    </div>
+                    <div notation="h1" class="square">
+                        <span class="bottom-notation dark">h</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="whiteInfo">
+            <div id="whiteTimer">--:--.--</div>
+        </div>
     </div>
-    <div id="whiteTimer">1</div>
-    <div id="blackTimer">1</div>
     <div id="controls">
         <div id="toast">Hello world!</div>
         <div>
