--- a/src/game/game.html
+++ b/src/game/game.html
@@ -6,7 +6,7 @@
     <base href="/">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Chess</title>
+    <title>Unknown Game - NK Chess</title>
 </head>
 <body data-id="{{ .id }}">
     {{ template "header.html" . }}
